@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-05-11T08:14:17Z",
+  "timestamp" : "2024-05-11T16:13:50Z",
   "count_outdated" : 202817,
   "uniques_outdated" : 2028,
-  "count" : 207069,
+  "count" : 207159,
   "uniques" : 2049,
   "clones" : [
     {
       "timestamp": "2024-04-27T00:00:00Z",
-      "count": 132,
-      "count_minmax": [ 112, 296 ],
-      "count_decinc": [ 164, 296 ],
+      "count": 40,
+      "count_minmax": [ 40, 296 ],
+      "count_decinc": [ 256, 296 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2024-05-11T00:00:00Z",
-      "count": 113,
-      "count_minmax": [ 113, 113 ],
-      "count_decinc": [ 0, 113 ],
+      "count": 203,
+      "count_minmax": [ 113, 203 ],
+      "count_decinc": [ 0, 203 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
